--- a/form-api-frontend/src/App.css
+++ b/form-api-frontend/src/App.css
@@ -4,3 +4,16 @@
     top: 2rem;
     left: 30rem;
 }
+
+.header-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    .btn-container{
+        margin-top: 0.5rem;
+        width: 20%;
+        height: 10%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
